--- a/nginx.conf
+++ b/nginx.conf
@@ -5,25 +5,27 @@ events { worker_connections 1024; }
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
     sendfile        on;
     keepalive_timeout  65;
 
     server {
         listen 80;
 
-        # Frontend served at /
+        # Serve frontend
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            root /var/www/html;
+            index index.html;
             try_files $uri /index.html;
         }
 
-        # Backend proxy at /api
+        # Proxy API to backend
         location /api/ {
             proxy_pass http://localhost:10000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection keep-alive;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
