--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
             try_files $uri /index.html;
         }
 
-        # Proxy API to backend
+        # Proxy API requests
         location /api/ {
             proxy_pass http://localhost:10000/;
             proxy_http_version 1.1;
