--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,8 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
     include       mime.types;
@@ -11,14 +13,12 @@ http {
     server {
         listen 80;
 
-        # Serve frontend
         location / {
             root /var/www/html;
             index index.html;
             try_files $uri /index.html;
         }
 
-        # Proxy API requests
         location /api/ {
             proxy_pass http://localhost:10000/;
             proxy_http_version 1.1;
