--- a/nginx.conf
+++ b/nginx.conf
@@ -8,24 +8,24 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
     sendfile        on;
-    keepalive_timeout  65;
 
     server {
         listen 80;
 
+        # Serve frontend static files
+        root /var/www/html;
+        index index.html;
         location / {
-            root /var/www/html;
-            index index.html;
             try_files $uri /index.html;
         }
 
+        # Proxy API requests to FastAPI
         location /api/ {
-            proxy_pass http://localhost:10000/;
+            proxy_pass http://127.0.0.1:10000/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection keep-alive;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 }
