--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,29 @@
 worker_processes 1;
 
-events {
-    worker_connections 1024;
-}
+events { worker_connections 1024; }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
+    include mime.types;
+    default_type application/octet-stream;
+    sendfile on;
 
     server {
         listen 80;
 
-        # Serve frontend static files
-        root /var/www/html;
-        index index.html;
+        # Serve frontend files
         location / {
-            try_files $uri /index.html;
+            root /var/www/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Proxy API requests to FastAPI
+        # Proxy API requests
         location /api/ {
-            proxy_pass http://127.0.0.1:10000/api/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_pass http://localhost:10000;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
