--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,27 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
-    include mime.types;
-    default_type application/octet-stream;
-    sendfile on;
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
 
     server {
         listen 80;
 
-        # Serve frontend files
+        # Serve static files from frontend build
         location / {
             root /var/www/html;
             index index.html;
             try_files $uri $uri/ /index.html;
         }
 
-        # Proxy API requests
+        # Proxy API requests to FastAPI backend
         location /api/ {
-            proxy_pass http://localhost:10000;
+            proxy_pass http://localhost:10000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
