--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,12 +1,21 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=10
+loglevel=info
+pidfile=/var/run/supervisord.pid
 
 [program:uvicorn]
 command=uvicorn backend.app:app --host 0.0.0.0 --port 10000
+directory=/app
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/uvicorn.err.log
 stdout_logfile=/var/log/uvicorn.out.log
+redirect_stderr=false
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -14,3 +23,6 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/nginx.err.log
 stdout_logfile=/var/log/nginx.out.log
+redirect_stderr=false
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
