--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,6 +6,17 @@ logfile_backups=10
 loglevel=info
 pidfile=/var/run/supervisord.pid
 
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/nginx.err.log
+stdout_logfile=/var/log/nginx.out.log
+redirect_stderr=false
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+priority=1
+
 [program:uvicorn]
 command=uvicorn backend.app:app --host 0.0.0.0 --port 10000
 directory=/app
@@ -16,13 +27,4 @@ stdout_logfile=/var/log/uvicorn.out.log
 redirect_stderr=false
 stdout_logfile_maxbytes=50MB
 stdout_logfile_backups=10
-
-[program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/nginx.err.log
-stdout_logfile=/var/log/nginx.out.log
-redirect_stderr=false
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=10
+priority=2
