--- a/nginx.conf
+++ b/nginx.conf
@@ -30,22 +30,9 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         
-        # Serve static files from frontend build
-        location / {
-            root /var/www/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
-            
-            # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-            }
-        }
-        
-        # Proxy API requests to FastAPI backend
+        # Proxy API requests to FastAPI backend FIRST (more specific)
         location /api/ {
-            proxy_pass http://127.0.0.1:10000/;
+            proxy_pass http://127.0.0.1:10000/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -60,6 +47,19 @@ http {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+        
+        # Serve static files from frontend build (LAST - catch all)
+        location / {
+            root /var/www/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+            
+            # Cache static assets
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+            }
         }
     }
 }
