--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,12 +2,15 @@
 nodaemon=true
 
 [program:nginx]
-command=nginx -g "daemon off;"
+command=/usr/sbin/nginx -g "daemon off;"
 autostart=true
 autorestart=true
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
 
 [program:uvicorn]
-command=uvicorn app:app --host 0.0.0.0 --port 8000
-directory=/app
+command=uvicorn backend.app:app --host 0.0.0.0 --port 10000
 autostart=true
 autorestart=true
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
