--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,39 @@
-worker_processes 1;
-
-events {
-  worker_connections 1024;
-}
+worker_processes  1;
+events { worker_connections 1024; }
 
 http {
-  include       mime.types;
-  default_type  application/octet-stream;
-  sendfile        on;
-  keepalive_timeout  65;
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
 
-  server {
-    listen 80;
+    server {
+        listen 80;
 
-    # Frontend
-    location / {
-      root /var/www/html;
-      index index.html;
-      try_files $uri $uri/ /index.html;
+        # Serve frontend static files
+        location / {
+            root   /var/www/html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Proxy API requests
+        location /api/ {
+            proxy_pass http://127.0.0.1:10000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Static files (e.g. JS/CSS/images)
+        location /assets/ {
+            alias /var/www/html/assets/;
+            access_log off;
+            expires 30d;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
     }
-
-    # Backend API
-    location /api/ {
-      proxy_pass http://localhost:8000/api/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
-  }
 }
