--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
-worker_processes 1;
-
-events { worker_connections 1024; }
+worker_processes  1;
+events { worker_connections  1024; }
 
 http {
     include       mime.types;
     default_type  application/octet-stream;
+
     sendfile        on;
     keepalive_timeout  65;
 
@@ -12,16 +12,17 @@ http {
         listen 80;
 
         location /api/ {
-            proxy_pass http://localhost:10000/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass         http://127.0.0.1:10000/api/;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
         location / {
-            root /var/www/frontend;
-            try_files $uri /index.html;
+            root   /app/frontend_dist;
+            try_files $uri $uri/ /index.html;
+            index  index.html index.htm;
         }
     }
 }
