--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,15 +2,16 @@
 nodaemon=true
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
+command=nginx -g 'daemon off;'
+priority=10
 autostart=true
 autorestart=true
-stderr_logfile=/dev/stderr
-stdout_logfile=/dev/stdout
+stopsignal=TERM
 
 [program:uvicorn]
-command=uvicorn backend.app:app --host 0.0.0.0 --port 10000
+command=python -m uvicorn backend.app:app --host 0.0.0.0 --port 10000
+directory=/app
 autostart=true
 autorestart=true
-stderr_logfile=/dev/stderr
-stdout_logfile=/dev/stdout
+priority=20
+stopsignal=TERM
